music4j/org/music4j/rubato/gen/RubatoParser.java
// Generated from Rubato.g4 by ANTLR 4.4

    package org.music4j.rubato.gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RubatoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__17=1, T__16=2, T__15=3, T__14=4, T__13=5, T__12=6, T__11=7, T__10=8, 
		T__9=9, T__8=10, T__7=11, T__6=12, T__5=13, T__4=14, T__3=15, T__2=16, 
		T__1=17, T__0=18, STEP=19, FLAT=20, FLAT_FLAT=21, DOUBLE_SHARP=22, SHARP=23, 
		NATURAL=24, LINED=25, COMMA=26, INT=27, DOT=28, LINE_COMMENT=29, COMMENT=30, 
		WHITESPACE=31;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'Voice'", "'R'", "'MODE_OCTAVE'", "'absolute'", "':'", 
		"'['", "'{'", "'MODE'", "'|'", "']'", "'}'", "'~'", "'relative'", "'Part'", 
		"'MODE_TIME'", "'Staff'", "'Score'", "STEP", "FLAT", "FLAT_FLAT", "DOUBLE_SHARP", 
		"SHARP", "NATURAL", "'''", "COMMA", "INT", "'.'", "LINE_COMMENT", "COMMENT", 
		"WHITESPACE"
	};
	public static final int
		RULE_score = 0, RULE_part = 1, RULE_staff = 2, RULE_staffVoice = 3, RULE_voice = 4, 
		RULE_note = 5, RULE_pitch = 6, RULE_alter = 7, RULE_octave = 8, RULE_duration = 9, 
		RULE_noteSuffix = 10, RULE_scoreSettings = 11, RULE_modeTime = 12, RULE_modeOctave = 13, 
		RULE_modeTimeAndOctave = 14;
	public static final String[] ruleNames = {
		"score", "part", "staff", "staffVoice", "voice", "note", "pitch", "alter", 
		"octave", "duration", "noteSuffix", "scoreSettings", "modeTime", "modeOctave", 
		"modeTimeAndOctave"
	};

	@Override
	public String getGrammarFileName() { return "Rubato.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RubatoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScoreContext extends ParserRuleContext {
		public ScoreSettingsContext scoreSettings(int i) {
			return getRuleContext(ScoreSettingsContext.class,i);
		}
		public List<ScoreSettingsContext> scoreSettings() {
			return getRuleContexts(ScoreSettingsContext.class);
		}
		public List<PartContext> part() {
			return getRuleContexts(PartContext.class);
		}
		public PartContext part(int i) {
			return getRuleContext(PartContext.class,i);
		}
		public ScoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_score; }
	}

	public final ScoreContext score() throws RecognitionException {
		ScoreContext _localctx = new ScoreContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_score);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30); match(T__0);
			setState(31); match(T__10);
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__11) {
				{
				{
				setState(32); scoreSettings();
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(38); part();
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(44); match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PartContext extends ParserRuleContext {
		public List<StaffContext> staff() {
			return getRuleContexts(StaffContext.class);
		}
		public StaffContext staff(int i) {
			return getRuleContext(StaffContext.class,i);
		}
		public PartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_part; }
	}

	public final PartContext part() throws RecognitionException {
		PartContext _localctx = new PartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_part);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46); match(T__3);
			setState(47); match(T__10);
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(48); staff();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54); match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StaffContext extends ParserRuleContext {
		public StaffVoiceContext staffVoice(int i) {
			return getRuleContext(StaffVoiceContext.class,i);
		}
		public List<StaffVoiceContext> staffVoice() {
			return getRuleContexts(StaffVoiceContext.class);
		}
		public StaffContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_staff; }
	}

	public final StaffContext staff() throws RecognitionException {
		StaffContext _localctx = new StaffContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_staff);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56); match(T__1);
			setState(57); match(T__10);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__16) {
				{
				{
				setState(58); staffVoice();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64); match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StaffVoiceContext extends ParserRuleContext {
		public StaffVoiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_staffVoice; }
	 
		public StaffVoiceContext() { }
		public void copyFrom(StaffVoiceContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StaffVoiceNonEmptyContext extends StaffVoiceContext {
		public VoiceContext voice(int i) {
			return getRuleContext(VoiceContext.class,i);
		}
		public List<VoiceContext> voice() {
			return getRuleContexts(VoiceContext.class);
		}
		public StaffVoiceNonEmptyContext(StaffVoiceContext ctx) { copyFrom(ctx); }
	}
	public static class StaffVoiceEmptyContext extends StaffVoiceContext {
		public StaffVoiceEmptyContext(StaffVoiceContext ctx) { copyFrom(ctx); }
	}

	public final StaffVoiceContext staffVoice() throws RecognitionException {
		StaffVoiceContext _localctx = new StaffVoiceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_staffVoice);
		int _la;
		try {
			setState(81);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new StaffVoiceEmptyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(66); match(T__16);
				setState(67); match(T__10);
				setState(68); match(T__6);
				}
				break;
			case 2:
				_localctx = new StaffVoiceNonEmptyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(69); match(T__16);
				setState(70); match(T__10);
				setState(71); voice();
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(72); match(T__8);
					setState(73); voice();
					}
					}
					setState(78);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(79); match(T__6);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VoiceContext extends ParserRuleContext {
		public List<NoteContext> note() {
			return getRuleContexts(NoteContext.class);
		}
		public NoteContext note(int i) {
			return getRuleContext(NoteContext.class,i);
		}
		public VoiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_voice; }
	}

	public final VoiceContext voice() throws RecognitionException {
		VoiceContext _localctx = new VoiceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_voice);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << T__11) | (1L << STEP))) != 0)) {
				{
				{
				setState(83); note();
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NoteContext extends ParserRuleContext {
		public NoteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_note; }
	 
		public NoteContext() { }
		public void copyFrom(NoteContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NoteRestContext extends NoteContext {
		public List<TerminalNode> DOT() { return getTokens(RubatoParser.DOT); }
		public DurationContext duration() {
			return getRuleContext(DurationContext.class,0);
		}
		public TerminalNode DOT(int i) {
			return getToken(RubatoParser.DOT, i);
		}
		public NoteRestContext(NoteContext ctx) { copyFrom(ctx); }
	}
	public static class NoteChordContext extends NoteContext {
		public List<TerminalNode> DOT() { return getTokens(RubatoParser.DOT); }
		public PitchContext pitch(int i) {
			return getRuleContext(PitchContext.class,i);
		}
		public List<PitchContext> pitch() {
			return getRuleContexts(PitchContext.class);
		}
		public DurationContext duration() {
			return getRuleContext(DurationContext.class,0);
		}
		public NoteSuffixContext noteSuffix(int i) {
			return getRuleContext(NoteSuffixContext.class,i);
		}
		public List<NoteSuffixContext> noteSuffix() {
			return getRuleContexts(NoteSuffixContext.class);
		}
		public TerminalNode DOT(int i) {
			return getToken(RubatoParser.DOT, i);
		}
		public NoteChordContext(NoteContext ctx) { copyFrom(ctx); }
	}
	public static class NoteSingleContext extends NoteContext {
		public List<TerminalNode> DOT() { return getTokens(RubatoParser.DOT); }
		public PitchContext pitch() {
			return getRuleContext(PitchContext.class,0);
		}
		public DurationContext duration() {
			return getRuleContext(DurationContext.class,0);
		}
		public NoteSuffixContext noteSuffix(int i) {
			return getRuleContext(NoteSuffixContext.class,i);
		}
		public List<NoteSuffixContext> noteSuffix() {
			return getRuleContexts(NoteSuffixContext.class);
		}
		public TerminalNode DOT(int i) {
			return getToken(RubatoParser.DOT, i);
		}
		public NoteSingleContext(NoteContext ctx) { copyFrom(ctx); }
	}

	public final NoteContext note() throws RecognitionException {
		NoteContext _localctx = new NoteContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_note);
		int _la;
		try {
			setState(137);
			switch (_input.LA(1)) {
			case STEP:
				_localctx = new NoteSingleContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(89); pitch();
				setState(91);
				_la = _input.LA(1);
				if (_la==T__17 || _la==INT) {
					{
					setState(90); duration();
					}
				}

				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==DOT) {
					{
					{
					setState(93); match(DOT);
					}
					}
					setState(98);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(99); noteSuffix();
					}
					}
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case T__11:
				_localctx = new NoteChordContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(105); match(T__11);
				setState(107); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(106); pitch();
					}
					}
					setState(109); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==STEP );
				setState(111); match(T__7);
				setState(113);
				_la = _input.LA(1);
				if (_la==T__17 || _la==INT) {
					{
					setState(112); duration();
					}
				}

				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==DOT) {
					{
					{
					setState(115); match(DOT);
					}
					}
					setState(120);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(121); noteSuffix();
					}
					}
					setState(126);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case T__15:
				_localctx = new NoteRestContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(127); match(T__15);
				setState(129);
				_la = _input.LA(1);
				if (_la==T__17 || _la==INT) {
					{
					setState(128); duration();
					}
				}

				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==DOT) {
					{
					{
					setState(131); match(DOT);
					}
					}
					setState(136);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PitchContext extends ParserRuleContext {
		public OctaveContext octave() {
			return getRuleContext(OctaveContext.class,0);
		}
		public AlterContext alter() {
			return getRuleContext(AlterContext.class,0);
		}
		public TerminalNode STEP() { return getToken(RubatoParser.STEP, 0); }
		public PitchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pitch; }
	}

	public final PitchContext pitch() throws RecognitionException {
		PitchContext _localctx = new PitchContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pitch);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139); match(STEP);
			setState(141);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FLAT) | (1L << FLAT_FLAT) | (1L << DOUBLE_SHARP) | (1L << SHARP) | (1L << NATURAL))) != 0)) {
				{
				setState(140); alter();
				}
			}

			setState(144);
			_la = _input.LA(1);
			if (_la==LINED || _la==COMMA) {
				{
				setState(143); octave();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlterContext extends ParserRuleContext {
		public AlterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alter; }
	 
		public AlterContext() { }
		public void copyFrom(AlterContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AlterFlatFlatContext extends AlterContext {
		public TerminalNode FLAT_FLAT() { return getToken(RubatoParser.FLAT_FLAT, 0); }
		public AlterFlatFlatContext(AlterContext ctx) { copyFrom(ctx); }
	}
	public static class AlterDoubleSharpContext extends AlterContext {
		public TerminalNode DOUBLE_SHARP() { return getToken(RubatoParser.DOUBLE_SHARP, 0); }
		public AlterDoubleSharpContext(AlterContext ctx) { copyFrom(ctx); }
	}
	public static class AlterFlatContext extends AlterContext {
		public TerminalNode FLAT() { return getToken(RubatoParser.FLAT, 0); }
		public AlterFlatContext(AlterContext ctx) { copyFrom(ctx); }
	}
	public static class AlterNaturalContext extends AlterContext {
		public TerminalNode NATURAL() { return getToken(RubatoParser.NATURAL, 0); }
		public AlterNaturalContext(AlterContext ctx) { copyFrom(ctx); }
	}
	public static class AlterSharpContext extends AlterContext {
		public TerminalNode SHARP() { return getToken(RubatoParser.SHARP, 0); }
		public AlterSharpContext(AlterContext ctx) { copyFrom(ctx); }
	}

	public final AlterContext alter() throws RecognitionException {
		AlterContext _localctx = new AlterContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_alter);
		try {
			setState(151);
			switch (_input.LA(1)) {
			case FLAT:
				_localctx = new AlterFlatContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(146); match(FLAT);
				}
				break;
			case FLAT_FLAT:
				_localctx = new AlterFlatFlatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(147); match(FLAT_FLAT);
				}
				break;
			case DOUBLE_SHARP:
				_localctx = new AlterDoubleSharpContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(148); match(DOUBLE_SHARP);
				}
				break;
			case SHARP:
				_localctx = new AlterSharpContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(149); match(SHARP);
				}
				break;
			case NATURAL:
				_localctx = new AlterNaturalContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(150); match(NATURAL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OctaveContext extends ParserRuleContext {
		public List<TerminalNode> COMMA() { return getTokens(RubatoParser.COMMA); }
		public List<TerminalNode> LINED() { return getTokens(RubatoParser.LINED); }
		public TerminalNode LINED(int i) {
			return getToken(RubatoParser.LINED, i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(RubatoParser.COMMA, i);
		}
		public OctaveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_octave; }
	}

	public final OctaveContext octave() throws RecognitionException {
		OctaveContext _localctx = new OctaveContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_octave);
		int _la;
		try {
			setState(163);
			switch (_input.LA(1)) {
			case LINED:
				enterOuterAlt(_localctx, 1);
				{
				setState(154); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(153); match(LINED);
					}
					}
					setState(156); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==LINED );
				}
				break;
			case COMMA:
				enterOuterAlt(_localctx, 2);
				{
				setState(159); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(158); match(COMMA);
					}
					}
					setState(161); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==COMMA );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DurationContext extends ParserRuleContext {
		public DurationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_duration; }
	 
		public DurationContext() { }
		public void copyFrom(DurationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DurationInvertedIntegerContext extends DurationContext {
		public TerminalNode INT() { return getToken(RubatoParser.INT, 0); }
		public DurationInvertedIntegerContext(DurationContext ctx) { copyFrom(ctx); }
	}
	public static class DurationFractionContext extends DurationContext {
		public TerminalNode INT(int i) {
			return getToken(RubatoParser.INT, i);
		}
		public List<TerminalNode> INT() { return getTokens(RubatoParser.INT); }
		public DurationFractionContext(DurationContext ctx) { copyFrom(ctx); }
	}
	public static class DurationIntegerContext extends DurationContext {
		public TerminalNode INT() { return getToken(RubatoParser.INT, 0); }
		public DurationIntegerContext(DurationContext ctx) { copyFrom(ctx); }
	}

	public final DurationContext duration() throws RecognitionException {
		DurationContext _localctx = new DurationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_duration);
		try {
			setState(171);
			switch ( getInterpreter().adaptivePredict(_input,23,_ctx) ) {
			case 1:
				_localctx = new DurationFractionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(165); match(INT);
				setState(166); match(T__17);
				setState(167); match(INT);
				}
				break;
			case 2:
				_localctx = new DurationInvertedIntegerContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(168); match(T__17);
				setState(169); match(INT);
				}
				break;
			case 3:
				_localctx = new DurationIntegerContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(170); match(INT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NoteSuffixContext extends ParserRuleContext {
		public NoteSuffixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_noteSuffix; }
	 
		public NoteSuffixContext() { }
		public void copyFrom(NoteSuffixContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NoteSuffixTieContext extends NoteSuffixContext {
		public NoteSuffixTieContext(NoteSuffixContext ctx) { copyFrom(ctx); }
	}

	public final NoteSuffixContext noteSuffix() throws RecognitionException {
		NoteSuffixContext _localctx = new NoteSuffixContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_noteSuffix);
		try {
			_localctx = new NoteSuffixTieContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(173); match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScoreSettingsContext extends ParserRuleContext {
		public ModeOctaveContext modeOctave() {
			return getRuleContext(ModeOctaveContext.class,0);
		}
		public ModeTimeContext modeTime() {
			return getRuleContext(ModeTimeContext.class,0);
		}
		public ModeTimeAndOctaveContext modeTimeAndOctave() {
			return getRuleContext(ModeTimeAndOctaveContext.class,0);
		}
		public ScoreSettingsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scoreSettings; }
	}

	public final ScoreSettingsContext scoreSettings() throws RecognitionException {
		ScoreSettingsContext _localctx = new ScoreSettingsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_scoreSettings);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175); match(T__11);
			setState(179);
			switch (_input.LA(1)) {
			case T__2:
				{
				setState(176); modeTime();
				}
				break;
			case T__14:
				{
				setState(177); modeOctave();
				}
				break;
			case T__9:
				{
				setState(178); modeTimeAndOctave();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(181); match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModeTimeContext extends ParserRuleContext {
		public ModeTimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modeTime; }
	 
		public ModeTimeContext() { }
		public void copyFrom(ModeTimeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ModeTimeRelativeContext extends ModeTimeContext {
		public ModeTimeRelativeContext(ModeTimeContext ctx) { copyFrom(ctx); }
	}
	public static class ModeTimeAbsoluteContext extends ModeTimeContext {
		public ModeTimeAbsoluteContext(ModeTimeContext ctx) { copyFrom(ctx); }
	}

	public final ModeTimeContext modeTime() throws RecognitionException {
		ModeTimeContext _localctx = new ModeTimeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_modeTime);
		try {
			setState(189);
			switch ( getInterpreter().adaptivePredict(_input,25,_ctx) ) {
			case 1:
				_localctx = new ModeTimeAbsoluteContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(183); match(T__2);
				setState(184); match(T__12);
				setState(185); match(T__13);
				}
				break;
			case 2:
				_localctx = new ModeTimeRelativeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(186); match(T__2);
				setState(187); match(T__12);
				setState(188); match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModeOctaveContext extends ParserRuleContext {
		public ModeOctaveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modeOctave; }
	 
		public ModeOctaveContext() { }
		public void copyFrom(ModeOctaveContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ModeOctaveAbsoluteContext extends ModeOctaveContext {
		public ModeOctaveAbsoluteContext(ModeOctaveContext ctx) { copyFrom(ctx); }
	}
	public static class ModeOctaveRelativeContext extends ModeOctaveContext {
		public ModeOctaveRelativeContext(ModeOctaveContext ctx) { copyFrom(ctx); }
	}

	public final ModeOctaveContext modeOctave() throws RecognitionException {
		ModeOctaveContext _localctx = new ModeOctaveContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_modeOctave);
		try {
			setState(197);
			switch ( getInterpreter().adaptivePredict(_input,26,_ctx) ) {
			case 1:
				_localctx = new ModeOctaveAbsoluteContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(191); match(T__14);
				setState(192); match(T__12);
				setState(193); match(T__13);
				}
				break;
			case 2:
				_localctx = new ModeOctaveRelativeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(194); match(T__14);
				setState(195); match(T__12);
				setState(196); match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
